--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -1,5 +1,5 @@
 .cards {
-  width: 70rem;
+  /* width: 70rem; */
   height: 518px;
 
   /* background: red; */
@@ -26,8 +26,13 @@
   background: #1c204b;
   margin-top: -8em;
   border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
 }
 .card-bottom-top {
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -58,8 +63,9 @@
   font-size: 30px;
   line-height: 46px;
   color: #ffffff;
-  margin-bottom: 0px;
-  margin-left: 20px;
+  margin-bottom: 22px;
+  margin-left: 24px;
+  margin-top: 24px;
 }
 .card-bottom-footer .title {
   width: 80%;
@@ -79,4 +85,32 @@
   line-height: 14px;
 
   color: #ffffff;
+}
+.card-bottom-footer .rating :nth-child(2) {
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .cards {
+    width: auto;
+    grid-template-columns: auto;
+    margin-top: 24px;
+  }
+  .card {
+    width: 100%;
+  }
+  .card-top {
+    width: 320px;
+  }
+  .card-bottom {
+    width: 320px;
+    height: 129px;
+  }
+  .rating {
+    display: none;
+  }
+  .card-bottom-footer {
+    display: flex;
+    margin-top: -24px;
+  }
 }
